@@ -5,6 +5,9 @@ TODOS
   o put "halt" test into routines
   o counters for fn, gr, hess, and iterations properly done
   o add convcode (align names with optimr)
+  o see if optimize can be replaced with R function that allows 
+  capture of intermediate calculations
+  o implement Brent and Nash in R for line search (or simply pracma::fminbnd)
 
 
 2017-04-10
